--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
   "author": "Matheus Silva Martins Mota",
   "license": "ISC",
   "devDependencies": {
-    "@types/node": "^22.3.0",
-    "tsup": "^8.2.4",
-    "tsx": "^4.17.0",
-    "typescript": "^5.5.4"
+    "@types/node": "22.3.0",
+    "tsup": "8.2.4",
+    "tsx": "4.17.0",
+    "typescript": "5.5.4"
   },
   "dependencies": {
-    "dotenv": "^16.4.5",
-    "fastify": "^4.28.1",
-    "zod": "^3.23.8"
+    "dotenv": "16.4.5",
+    "fastify": "4.28.1",
+    "zod": "3.23.8"
   }
 }
