--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
     "[prisma]": {
         "editor.defaultFormatter": "Prisma.prisma",
-        "editor.formatOnSave": true
+        "editor.formatOnSave": true,
     }
 }
