--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "tsx watch src/server.ts",
     "start": "node build/server.js",
-    "build": "tsup src --out-dir build"
+    "build": "tsup src --out-dir build",
+    "migrate": "prisma migrate dev",
+    "db": "prisma studio"
   },
   "keywords": [],
   "author": "Matheus Silva Martins Mota",
