--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Matheus Silva Martins Mota",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "22.3.0",
     "prisma": "^5.18.0",
     "tsup": "8.2.4",
@@ -22,6 +23,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.18.0",
+    "bcryptjs": "^2.4.3",
     "dotenv": "16.4.5",
     "fastify": "4.28.1",
     "zod": "3.23.8"
