--- a/package.json
+++ b/package.json
@@ -2,13 +2,16 @@
   "name": "api-solid",
   "version": "1.0.0",
   "description": "Na aplicação, deve ser possível de:",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "dev": "tsx watch src/server.ts",
     "start": "node build/server.js",
     "build": "tsup src --out-dir build",
     "migrate": "prisma migrate dev",
-    "db": "prisma studio"
+    "db": "prisma studio",
+    "test": "vitest run",
+    "test:watch": "vitest"
   },
   "keywords": [],
   "author": "Matheus Silva Martins Mota",
@@ -19,7 +22,9 @@
     "prisma": "^5.18.0",
     "tsup": "8.2.4",
     "tsx": "4.17.0",
-    "typescript": "5.5.4"
+    "typescript": "5.5.4",
+    "vite-tsconfig-paths": "^5.0.1",
+    "vitest": "^2.0.5"
   },
   "dependencies": {
     "@prisma/client": "^5.18.0",
