--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "migrate": "prisma migrate dev",
     "db": "prisma studio",
     "test": "vitest run",
-    "test:watch": "vitest"
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage",
+    "test:ui": "vitest --ui"
   },
   "keywords": [],
   "author": "Matheus Silva Martins Mota",
@@ -19,6 +21,8 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "22.3.0",
+    "@vitest/coverage-v8": "^2.0.5",
+    "@vitest/ui": "^2.0.5",
     "prisma": "^5.18.0",
     "tsup": "8.2.4",
     "tsx": "4.17.0",
